# tylereq

./: .gitignore  LICENSE  README.md  license  pyproject.toml  readme.md  setup.py
.github/workflows/: publish.yml
Docs/: search.js
Docs/tylereq/: shapes.html
docs/: importantdevnote  index.html
docs/tylereq/: shapes.html
src/tylereq/: __init__.py  shapes.py  test_shapes.py
tests/: test_shapes.py
