[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tylereq"
version = "0.1.3"
description = "A simple equations module made by Tyler"
readme = "readme.md"
license = "MIT"
requires-python = ">=3.8"

urls = {Homepage = "https://github.com/tyleruploads/tylereq/"}

authors = [
    {name = "tyleruploads", email = "tyleruploads@yahoo.com"}
]

dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["tylereq"]
